--- a/PocSystemsFront/package.json
+++ b/PocSystemsFront/package.json
@@ -15,7 +15,9 @@
     "@react-navigation/native-stack": "6.7.0",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
+    "fetch": "^1.1.0",
     "formik": "^2.2.9",
+    "isomorphic-fetch": "^3.0.0",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-gesture-handler": "^2.10.0",
